added settings dialog and buttons

--- a/html/index.html
+++ b/html/index.html
@@ -3,21 +3,62 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A re-creation of the iMessage GamePidgeon Word Hunt game!" />
+    <meta
+      name="description"
+      content="A re-creation of the iMessage GamePidgeon Word Hunt game!"
+    />
     <title>Word Hunt</title>
     <link rel="stylesheet" href="../styles/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://code.iconify.design/iconify-icon/1.0.6/iconify-icon.min.js"></script>
     <script defer type="module" src="../src/main.ts"></script>
-  </head> 
+  </head>
 
   <template id="start-template"></template>
 
   <body>
+    <div class="settings-icon">
+      <iconify-icon
+        class="settings-icon"
+        icon="clarity:settings-line"
+        role="img"
+        aria-label="Settings"
+      ></iconify-icon>
+    </div>
+
+    <!-- Settings Dialog -->
+    <div class="settings-dialog" id="settings-dialog">
+      <div class="settings-content">
+        <label for="board-size">Board Size:</label>
+        <input
+          type="number"
+          id="board-size"
+          name="board-size"
+          min="3"
+          max="6"
+        />
+        <label for="time-limit">Time Limit (min):</label>
+        <input
+          type="number"
+          id="time-limit"
+          name="time-limit"
+          min="1"
+          max="30"
+        />
+        <button id="save-settings">Save</button>
+      </div>
+    </div>
+
     <div class="start-page">
       <h1>Word Hunt</h1>
-      <p>Connect letters together by dragging your mouse. Make as many words as you can before the time runs out!</p>
-      <img src="./../assets/intro.jpg" alt="Demo Image">
+      <p>
+        Connect letters together by dragging your mouse. Make as many words as
+        you can before the time runs out!
+      </p>
+      <img src="./../assets/intro.jpg" alt="Demo Image" />
       <button id="start-button">Start Game</button>
 
       <footer>
