--- a/public/index.html
+++ b/public/index.html
@@ -205,92 +205,208 @@
     <style>
       .game-page {
         text-align: center;
-        color: #f0f0f0;
+        display: flex;
+        flex-direction: row; /* Allow for a horizontal layout to include the tab */
+        align-items: flex-start; /* Align items at the top */
+        justify-content: center;
+        height: 75vh;
+        box-sizing: border-box;
+        padding-bottom: 30px;
+        font-family: "Poppins", sans-serif;
+      }
+
+      /* Header Section for Timer and Score */
+      .header-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;;
+        max-width: 600px;
+        margin-bottom: 20px;
+      }
+
+      .timer-container,
+      .score-container {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 100vh;
-        box-sizing: border-box;
-        padding-top: 30px;
-        font-family: 'Poppins', sans-serif;
-      }
-  
-      /* Timer container */
-      .timer-container {
-        display: flex;
         justify-content: center;
-        align-items: center;
-        font-size: 2.5em;
-        color: #ffdd57; 
-        margin-bottom: 20px;
-        padding: 15px 30px;
-        border-radius: 30px;
-        background: linear-gradient(145deg, #282847, #1c1c2d); 
-        box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4), -4px -4px 8px rgba(255, 255, 255, 0.1);
+        font-size: 1.2em;
+        padding: 10px 20px;
+        border-radius: 12px;
+        background: linear-gradient(145deg, #282847, #1c1c2d);
+        box-shadow:
+          4px 4px 8px rgba(0, 0, 0, 0.4),
+          -4px -4px 8px rgba(255, 255, 255, 0.1);
+        color: #ffdd57;
       }
-  
-      .timer-container span {
-        animation: pulse 2s infinite; 
+
+      .score-container {
+        background: linear-gradient(
+          145deg,
+          #1c1c2d,
+          #282847
+        ); /* Slightly different gradient for distinction */
       }
-  
-      /* Game board container */
+
+      .header-title {
+        font-size: 0.8em;
+        text-transform: uppercase;
+        color: #aaa;
+        margin-bottom: 5px;
+      }
+
+      .header-value {
+        font-size: 2em;
+        font-weight: bold;
+        color: #ffdd57;
+      }
+
+      /* Game board */
       #game-board {
         display: grid;
-        gap: 10px; 
-        width: 500px; 
-        height: 500px; 
+        gap: 10px;
+        width: 450px;
+        height: 450px;
         margin: auto;
-        border: 3px solid #4caf50; 
+        border: 3px solid #4caf50;
         border-radius: 12px;
         padding: 10px;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3); 
+        background-color: #1a1a2e;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
       }
-  
-      /* Game board cells */
+
       .cell {
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #252546; 
-        border: 1px solid #3e3e5c; 
+        background-color: #252546;
+        border: 1px solid #3e3e5c;
         font-size: 1.8em;
         font-weight: bold;
-        color: #e0e0e0; 
+        color: #e0e0e0;
         text-transform: uppercase;
         user-select: none;
         border-radius: 8px;
-        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4), -2px -2px 4px rgba(255, 255, 255, 0.05);
-        transition: transform 0.2s, background-color 0.2s; 
+        box-shadow:
+          2px 2px 4px rgba(0, 0, 0, 0.4),
+          -2px -2px 4px rgba(255, 255, 255, 0.05);
+        transition:
+          transform 0.2s,
+          background-color 0.2s;
       }
-  
+
       .cell:hover {
-        background-color: #ff5722; 
-        transform: scale(1.1); 
+        background-color: #ff5722;
+        transform: scale(1.1);
       }
-  
-      /* Pulse animation for the timer */
-      @keyframes pulse {
-        0%, 100% {
-          transform: scale(1);
-        }
-        50% {
-          transform: scale(1.05);
-        }
+
+      /* Found Words Tab */
+      .words-tab {
+        width: 200px;
+        height: 95%;
+        background-color: #2c2f3f; /* Distinct gray-blue background */
+        padding: 15px;
+        border-radius: 12px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+        margin-left: 150px; /* Add spacing from the game board */
+        overflow-y: auto; /* Allow scrolling if words exceed the height */
+      }
+
+      .words-tab h3 {
+        font-size: 1.2em;
+        color: #ffdd57; /* Matches the timer and score text */
+        margin-bottom: 10px;
+        text-align: center;
+      }
+
+      .word {
+        font-size: 1em;
+        color: #ffffff;
+        background-color: #3a3d4f; /* Subtle darker background for each word */
+        margin: 5px 0;
+        padding: 5px 10px;
+        border-radius: 8px;
+        text-align: center;
+      }
+
+      .word:nth-child(even) {
+        background-color: #454860; /* Slight variation for alternating rows */
+      }
+
+      footer .footer-content {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      footer .left,
+      footer .right {
+        flex: 1;
+        padding: 0 10px;
+        box-sizing: border-box;
+      }
+
+      footer .left {
+        text-align: left;
+      }
+
+      footer .right {
+        text-align: right;
+      }
+
+      footer {
+        background-color: #18743d;
+        color: #000;
+        padding: 10px 20px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
       }
     </style>
-  
+
     <div class="game-page">
-      <div class="timer-container">
-        <span id="time-remaining">3:00</span>
+      <!-- Main section with game board and header -->
+      <div>
+        <!-- Header for Timer and Score -->
+        <div class="header-container">
+          <!-- Timer -->
+          <div class="timer-container">
+            <div class="header-title">Time Remaining</div>
+            <div class="header-value" id="time-remaining">3:00</div>
+          </div>
+
+          <!-- Score -->
+          <div class="score-container">
+            <div class="header-title">Score</div>
+            <div class="header-value" id="score">0</div>
+          </div>
+        </div>
+
+        <!-- Game board -->
+        <div id="game-board"></div>
       </div>
-  
-      <!-- Game board -->
-      <div id="game-board">
-        <!-- Cells will be dynamically added here -->
+
+      <!-- Words Tab -->
+      <div class="words-tab">
+        <h3>Found Words</h3>
+        <!-- Words will be dynamically added here -->
+        <div id="found-words"></div>
       </div>
+
+      <footer>
+        <section class="footer-content">
+          <p class="left">&copy; Stephen Xu. All rights reserved.</p>
+          <p class="right">Inspired by GamePidgeon</p>
+        </section>
+      </footer>
     </div>
   </template>
-  
 
   <body>
     <div id="app">
