--- a/public/index.html
+++ b/public/index.html
@@ -296,8 +296,16 @@
       }
 
       .cell:hover {
-        background-color: #ff5722;
-        transform: scale(1.1);
+        transform: scale(1.05);
+      }
+
+      .cell.highlighted {
+        background-color: #ffcc00; 
+        border: 2px solid #ffa500; 
+        color: #ffffff; 
+        box-shadow: 0 0 10px rgba(255, 204, 0, 0.8); 
+        transform: scale(1.1); 
+        transition: background-color 0.3s ease, transform 0.2s ease; 
       }
 
       /* Found Words Tab */
