--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <style>
       .start-page {
         text-align: center;
-        color: white;
+        color: #ffdd57;
         display: flex;
         flex-direction: column;
         align-items: center; /* Ensures all children elements are centered */
@@ -46,8 +46,8 @@
       #start-button {
         padding: 10px 20px;
         font-size: 1.2em;
-        color: #4caf50;
-        background-color: white;
+        color: #1a1a2e;
+        background-color: yellow;
         margin-top: 40px; /* Space above the button */
         border: none;
         border-radius: 5px;
@@ -219,7 +219,7 @@
       .header-container {
         display: flex;
         justify-content: space-between;
-        align-items: center;;
+        align-items: center;
         max-width: 600px;
         margin-bottom: 20px;
       }
@@ -300,12 +300,14 @@
       }
 
       .cell.highlighted {
-        background-color: #ffcc00; 
-        border: 2px solid #ffa500; 
-        color: #ffffff; 
-        box-shadow: 0 0 10px rgba(255, 204, 0, 0.8); 
-        transform: scale(1.1); 
-        transition: background-color 0.3s ease, transform 0.2s ease; 
+        background-color: #ffcc00;
+        border: 2px solid #ffa500;
+        color: #ffffff;
+        box-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
+        transform: scale(1.1);
+        transition:
+          background-color 0.3s ease,
+          transform 0.2s ease;
       }
 
       /* Found Words Tab */
@@ -339,6 +341,26 @@
 
       .word:nth-child(even) {
         background-color: #454860; /* Slight variation for alternating rows */
+      }
+
+      /* Scrollbar Styling */
+      .words-tab::-webkit-scrollbar {
+        width: 10px; /* Adjust scrollbar width */
+      }
+
+      .words-tab::-webkit-scrollbar-track {
+        background: #2c2f3f; /* Match panel background for seamless blend */
+        border-radius: 10px;
+      }
+
+      .words-tab::-webkit-scrollbar-thumb {
+        background-color: #3e4258; /* Subtle darker tone for the thumb */
+        border-radius: 10px;
+        border: 2px solid #2c2f3f; /* Adds spacing and blends with the track */
+      }
+
+      .words-tab::-webkit-scrollbar-thumb:hover {
+        background-color: #5b5e72; /* Slightly brighter on hover for interactivity */
       }
 
       footer .footer-content {
@@ -416,9 +438,252 @@
     </div>
   </template>
 
-  <body>
-    <div id="app">
-      <start-page> </start-page>
+  <template id="game-template">
+    <style>
+      .game-page {
+        text-align: center;
+        display: flex;
+        flex-direction: row; /* Allow for a horizontal layout to include the tab */
+        align-items: flex-start; /* Align items at the top */
+        justify-content: center;
+        height: 75vh;
+        box-sizing: border-box;
+        padding-bottom: 30px;
+        font-family: "Poppins", sans-serif;
+      }
+
+      /* Header Section for Timer and Score */
+      .header-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 600px;
+        margin-bottom: 20px;
+      }
+
+      .timer-container,
+      .score-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.2em;
+        padding: 10px 20px;
+        border-radius: 12px;
+        background: linear-gradient(145deg, #282847, #1c1c2d);
+        box-shadow:
+          4px 4px 8px rgba(0, 0, 0, 0.4),
+          -4px -4px 8px rgba(255, 255, 255, 0.1);
+        color: #ffdd57;
+      }
+
+      .score-container {
+        background: linear-gradient(
+          145deg,
+          #1c1c2d,
+          #282847
+        ); /* Slightly different gradient for distinction */
+      }
+
+      .header-title {
+        font-size: 0.8em;
+        text-transform: uppercase;
+        color: #aaa;
+        margin-bottom: 5px;
+      }
+
+      .header-value {
+        font-size: 2em;
+        font-weight: bold;
+        color: #ffdd57;
+      }
+
+      /* Game board */
+      #game-board {
+        display: grid;
+        gap: 10px;
+        width: 450px;
+        height: 450px;
+        margin: auto;
+        border: 3px solid #4caf50;
+        border-radius: 12px;
+        padding: 10px;
+        background-color: #1a1a2e;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+      }
+
+      .cell {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #252546;
+        border: 1px solid #3e3e5c;
+        font-size: 1.8em;
+        font-weight: bold;
+        color: #e0e0e0;
+        text-transform: uppercase;
+        user-select: none;
+        border-radius: 8px;
+        box-shadow:
+          2px 2px 4px rgba(0, 0, 0, 0.4),
+          -2px -2px 4px rgba(255, 255, 255, 0.05);
+        transition:
+          transform 0.2s,
+          background-color 0.2s;
+      }
+
+      .cell:hover {
+        transform: scale(1.05);
+      }
+
+      .cell.highlighted {
+        background-color: #ffcc00;
+        border: 2px solid #ffa500;
+        color: #ffffff;
+        box-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
+        transform: scale(1.1);
+        transition:
+          background-color 0.3s ease,
+          transform 0.2s ease;
+      }
+
+      /* Found Words Tab */
+      .words-tab {
+        width: 200px;
+        height: 95%;
+        background-color: #2c2f3f; /* Distinct gray-blue background */
+        padding: 15px;
+        border-radius: 12px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+        margin-left: 150px; /* Add spacing from the game board */
+        display: flex;
+        flex-direction: column; /* Stack heading and content vertically */
+      }
+
+      .words-tab h3 {
+        font-size: 1.2em;
+        color: #ffdd57; /* Matches the timer and score text */
+        margin-bottom: 10px;
+        text-align: center;
+        flex-shrink: 0; /* Prevent shrinking of the heading */
+      }
+
+      .scrollable-content {
+        overflow-y: auto; /* Enable scrolling for the list */
+        flex-grow: 1; /* Allow the content to grow and fill available space */
+      }
+
+      .scrollable-content .word {
+        font-size: 1em;
+        color: #ffffff;
+        background-color: #3a3d4f; /* Subtle darker background for each word */
+        margin: 5px 0;
+        padding: 5px 10px;
+        border-radius: 8px;
+        text-align: center;
+      }
+
+      .scrollable-content .word:nth-child(even) {
+        background-color: #454860; /* Slight variation for alternating rows */
+      }
+
+      /* Scrollbar Styling */
+      .scrollable-content::-webkit-scrollbar {
+        width: 10px; /* Adjust scrollbar width */
+      }
+
+      .scrollable-content::-webkit-scrollbar-track {
+        background: #2c2f3f; /* Match panel background for seamless blend */
+        border-radius: 10px;
+      }
+
+      .scrollable-content::-webkit-scrollbar-thumb {
+        background-color: #3e4258; /* Subtle darker tone for the thumb */
+        border-radius: 10px;
+        border: 2px solid #2c2f3f; /* Adds spacing and blends with the track */
+      }
+
+      .scrollable-content::-webkit-scrollbar-thumb:hover {
+        background-color: #5b5e72; /* Slightly brighter on hover for interactivity */
+      }
+
+      footer .footer-content {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      footer .left,
+      footer .right {
+        flex: 1;
+        padding: 0 10px;
+        box-sizing: border-box;
+      }
+
+      footer .left {
+        text-align: left;
+      }
+
+      footer .right {
+        text-align: right;
+      }
+
+      footer {
+        background-color: #18743d;
+        color: #000;
+        padding: 10px 20px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    </style>
+
+    <div class="game-page">
+      <!-- Main section with game board and header -->
+      <div>
+        <!-- Header for Timer and Score -->
+        <div class="header-container">
+          <!-- Timer -->
+          <div class="timer-container">
+            <div class="header-title">Time Remaining</div>
+            <div class="header-value" id="time-remaining">3:00</div>
+          </div>
+
+          <!-- Score -->
+          <div class="score-container">
+            <div class="header-title">Score</div>
+            <div class="header-value" id="score">0</div>
+          </div>
+        </div>
+
+        <!-- Game board -->
+        <div id="game-board"></div>
+      </div>
+
+      <!-- Words Tab -->
+      <div class="words-tab">
+        <h3>Found Words</h3>
+        <div class="scrollable-content" id="found-words">
+          <!-- Words will be dynamically added here -->
+        </div>
+      </div>
+
+      <footer>
+        <section class="footer-content">
+          <p class="left">&copy; Stephen Xu. All rights reserved.</p>
+          <p class="right">Inspired by GamePidgeon</p>
+        </section>
+      </footer>
     </div>
+  </template>
+
+  <body>
+    <div id="app"></div>
   </body>
 </html>
