--- a/public/index.html
+++ b/public/index.html
@@ -474,197 +474,140 @@
     </div>
   </template>
 
-  <template id="game-template">
+  <template id="end-template">
     <style>
-      .game-page {
-        text-align: center;
-        display: flex;
-        flex-direction: row; /* Allow for a horizontal layout to include the tab */
-        align-items: flex-start; /* Align items at the top */
-        justify-content: center;
-        height: 75vh;
-        box-sizing: border-box;
-        padding-bottom: 30px;
-        font-family: "Poppins", sans-serif;
-      }
-
-      /* Header Section for Timer and Score */
-      .header-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        max-width: 600px;
-        margin-bottom: 20px;
-      }
-
-      .timer-container,
-      .score-container {
+      .end-page {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        font-size: 1.2em;
-        padding: 10px 20px;
-        border-radius: 12px;
-        background: linear-gradient(145deg, #282847, #1c1c2d);
-        box-shadow:
-          4px 4px 8px rgba(0, 0, 0, 0.4),
-          -4px -4px 8px rgba(255, 255, 255, 0.1);
-        color: #ffdd57;
+        height: 100vh;
+        font-family: 'Poppins', sans-serif;
+        color: #f0f0f0;
+        text-align: center;
+        padding: 40px;
+        box-sizing: border-box;
+        gap: 30px; /* Add vertical spacing between sections */
       }
-
+  
+      /* Score Section */
       .score-container {
-        background: linear-gradient(
-          145deg,
-          #1c1c2d,
-          #282847
-        ); /* Slightly different gradient for distinction */
-      }
-
-      .header-title {
-        font-size: 0.8em;
-        text-transform: uppercase;
-        color: #aaa;
-        margin-bottom: 5px;
-      }
-
-      .header-value {
-        font-size: 2em;
+        font-size: 2.5em; /* Slightly larger text */
         font-weight: bold;
         color: #ffdd57;
+        margin-bottom: 40px; /* Increased margin for spacing */
       }
-
-      /* Game board */
-      #game-board {
-        display: grid;
-        gap: 10px;
-        width: 450px;
-        height: 450px;
-        margin: auto;
-        border: 3px solid #4caf50;
-        border-radius: 12px;
-        padding: 10px;
-        background-color: #1a1a2e;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-      }
-
-      .cell {
+  
+      /* Words Panels Container */
+      .words-panels {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #252546;
-        border: 1px solid #3e3e5c;
-        font-size: 1.8em;
-        font-weight: bold;
-        color: #e0e0e0;
-        text-transform: uppercase;
-        user-select: none;
-        border-radius: 8px;
-        box-shadow:
-          2px 2px 4px rgba(0, 0, 0, 0.4),
-          -2px -2px 4px rgba(255, 255, 255, 0.05);
-        transition:
-          transform 0.2s,
-          background-color 0.2s;
+        justify-content: space-around;
+        gap: 50px; /* Increased gap between panels */
+        width: 120%; /* Slightly wider panels */
+        max-width: 1000px; /* Allow for more spacing on larger screens */
       }
-
-      .cell:hover {
-        transform: scale(1.05);
-      }
-
-      .cell.highlighted {
-        background-color: #ffcc00;
-        border: 2px solid #ffa500;
-        color: #ffffff;
-        box-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
-        transform: scale(1.1);
-        transition:
-          background-color 0.3s ease,
-          transform 0.2s ease;
-      }
-
-      /* Found Words Tab */
-      .words-tab {
-        width: 200px;
-        height: 95%;
-        background-color: #2c2f3f; /* Distinct gray-blue background */
-        padding: 15px;
-        border-radius: 12px;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-        margin-left: 150px; /* Add spacing from the game board */
+  
+      .panel {
         display: flex;
         flex-direction: column; /* Stack heading and content vertically */
+        background-color: #2c2f3f; /* Subtle contrast background */
+        border-radius: 12px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+        padding: 15px;
+        flex: 1;
+        max-height: 350px; /* Limit height for content */
       }
-
-      .words-tab h3 {
-        font-size: 1.2em;
-        color: #ffdd57; /* Matches the timer and score text */
+  
+      .panel h3 {
+        font-size: 1.4em; /* Larger heading text */
+        color: #ffdd57;
         margin-bottom: 10px;
-        text-align: center;
-        flex-shrink: 0; /* Prevent shrinking of the heading */
+        text-transform: uppercase;
+        flex-shrink: 0; /* Prevent heading from shrinking */
       }
-
+  
       .scrollable-content {
         overflow-y: auto; /* Enable scrolling for the list */
-        flex-grow: 1; /* Allow the content to grow and fill available space */
+        flex-grow: 1; /* Allow the list to expand and fill the panel */
       }
-
-      .scrollable-content .word {
-        font-size: 1em;
-        color: #ffffff;
-        background-color: #3a3d4f; /* Subtle darker background for each word */
-        margin: 5px 0;
-        padding: 5px 10px;
+  
+      .scrollable-content ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+  
+      .scrollable-content li {
+        font-size: 1.1em; /* Slightly larger text */
+        margin: 8px 0; /* More spacing between items */
+        padding: 8px 12px; /* Increased padding inside items */
         border-radius: 8px;
-        text-align: center;
+        background-color: #3a3d4f; /* Slightly darker background for items */
+        text-align: left;
       }
-
-      .scrollable-content .word:nth-child(even) {
-        background-color: #454860; /* Slight variation for alternating rows */
+  
+      .scrollable-content li:nth-child(even) {
+        background-color: #454860; /* Alternate row coloring */
       }
-
+  
       /* Scrollbar Styling */
       .scrollable-content::-webkit-scrollbar {
-        width: 10px; /* Adjust scrollbar width */
+        width: 8px;
       }
-
+  
       .scrollable-content::-webkit-scrollbar-track {
-        background: #2c2f3f; /* Match panel background for seamless blend */
-        border-radius: 10px;
+        background: #2c2f3f; /* Matches panel background */
       }
-
+  
       .scrollable-content::-webkit-scrollbar-thumb {
-        background-color: #3e4258; /* Subtle darker tone for the thumb */
+        background-color: #3a3d4f; /* Matches list item background */
         border-radius: 10px;
-        border: 2px solid #2c2f3f; /* Adds spacing and blends with the track */
+        border: 2px solid #2c2f3f; /* Blends with panel */
       }
-
-      .scrollable-content::-webkit-scrollbar-thumb:hover {
-        background-color: #5b5e72; /* Slightly brighter on hover for interactivity */
+  
+      /* Play Again Button */
+      .play-again-button {
+        padding: 15px 30px; /* Larger button for better clickability */
+        font-size: 1em;
+        font-weight: bold;
+        color: #1e1e2f;
+        background-color: #ffdd57;
+        border: none;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        margin-top: 20px; /* Add spacing above button */
       }
-
+  
+      .play-again-button:hover {
+        background-color: #ffaa00;
+        transform: scale(1.1);
+      }
+  
       footer .footer-content {
         width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 10px 20px;
       }
-
+  
       footer .left,
       footer .right {
         flex: 1;
         padding: 0 10px;
         box-sizing: border-box;
       }
-
+  
       footer .left {
         text-align: left;
       }
-
+  
       footer .right {
         text-align: right;
       }
-
+  
       footer {
         background-color: #18743d;
         color: #000;
@@ -677,39 +620,38 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-top: 30px; /* Add spacing between content and footer */
       }
     </style>
-
-    <div class="game-page">
-      <!-- Main section with game board and header -->
-      <div>
-        <!-- Header for Timer and Score -->
-        <div class="header-container">
-          <!-- Timer -->
-          <div class="timer-container">
-            <div class="header-title">Time Remaining</div>
-            <div class="header-value" id="time-remaining">3:00</div>
-          </div>
-
-          <!-- Score -->
-          <div class="score-container">
-            <div class="header-title">Score</div>
-            <div class="header-value" id="score">0</div>
+  
+    <div class="end-page">
+      <!-- Score Section -->
+      <div class="score-container">
+        Your Score: <span id="final-score">0</span>
+      </div>
+  
+      <!-- Words Panels -->
+      <div class="words-panels">
+        <!-- Found Words -->
+        <div class="panel" id="found-words-panel">
+          <h3>Words You Found</h3>
+          <div class="scrollable-content">
+            <ul id="found-words-list"></ul>
           </div>
         </div>
-
-        <!-- Game board -->
-        <div id="game-board"></div>
-      </div>
-
-      <!-- Words Tab -->
-      <div class="words-tab">
-        <h3>Found Words</h3>
-        <div class="scrollable-content" id="found-words">
-          <!-- Words will be dynamically added here -->
+  
+        <!-- Missed Words -->
+        <div class="panel" id="missed-words-panel">
+          <h3>Words You Missed</h3>
+          <div class="scrollable-content">
+            <ul id="missed-words-list"></ul>
+          </div>
         </div>
       </div>
-
+  
+      <!-- Play Again Button -->
+      <button class="play-again-button" id="play-again-button">Play Again</button>
+  
       <footer>
         <section class="footer-content">
           <p class="left">&copy; Stephen Xu. All rights reserved.</p>
@@ -718,6 +660,7 @@
       </footer>
     </div>
   </template>
+  
 
   <body>
     <div id="app"></div>
