new preview image

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 
       .start-page img {
         margin-top: 20px; /* Space above the image */
-        max-width: 150%; /* Increase max-width to make the image larger */
+        width: 30%;
         height: auto; /* Maintains the aspect ratio */
         object-fit: contain; /* Ensures the image is nicely fitted */
       }
